fixed all positioning of main body to Relative in order to make use of the footer, and fixed styling of the Warehouse list component and Warehouses component columns and rows to make them align better

--- a/client/src/components/WarehouseList/WarehouseList.scss
+++ b/client/src/components/WarehouseList/WarehouseList.scss
@@ -61,14 +61,24 @@
 
             @include tablet {
                 padding-left: 3rem;
+                position: absolute;
+                right: 67%;
             }
         }
 
         &-contact {
             padding-right:2.5rem;
-
+            @include tablet {
+                position: absolute;
+                right: 48%;
+            }
             &-information {
                 margin-top: 1rem;
+                @include tablet {
+                    position: absolute;
+                    top:-15px;
+                    right: 20%;
+                }
             }
 
         }
@@ -77,11 +87,11 @@
             display: flex;
             flex-direction: column;
             padding-right: 1.5rem;
-            position: absolute;
             width: 150px;
             right: -40px;
 
             @include tablet {
+                position: absolute;
                 flex-direction: row;
                 align-items: center;
                 width: -webkit-fill-available;
@@ -135,18 +145,13 @@
             margin-top:0.3rem; 
 
             @include tablet {
-                position: absolute;
-                right: 64%;
+                position: relative;
+                bottom: 2.5rem;
                 width: 100px;
-                top:10px;
+                left: 2rem;
             }
 
-            @include desktop {
-                position: absolute;
-                right: 59%;
-                width: 220px;
-                top:30px;
-            }
+
 
 
         }
@@ -157,21 +162,17 @@
         &-number {
             @include regular;
             font-size: 12px;
-            line-height: 20px; 
+            line-height: 20px;
             margin:0;
             margin-top:0.3rem; 
             
             @include tablet {
-                position: absolute;
-                top:-15px;
-                right: 30%;
+                position: relative;
+                bottom: 1.5rem;
+                right: 3rem;
             }
 
-            @include desktop {
-                position: absolute;
-                top:-15px;
-                right: 25.5%;
-            }
+
         }
 
         &-email {
@@ -179,22 +180,15 @@
             font-size: 12px;
             line-height: 20px;
             margin: 0; 
-            
             @include tablet {
-                position: absolute;
-                right: 29%;
-                width: 104px;   
-                bottom: -8px;
+                position: relative;
+                bottom: 1.5rem;
+                right: 3rem;
+                width: 1rem;
 
             }
 
-            @include desktop {
-                position: absolute;
-                right: 25%;
-                width: 104px;   
-                bottom: -8px;
 
-            }
             
         }
         &-name {
@@ -205,16 +199,13 @@
             margin-top:0.3rem; 
 
             @include tablet {
-                position: absolute;
-                right: 49%;
+                position: relative;
+                left: 0.5rem;
                 bottom:0px;
                 width:100px;
             }
 
-            @include desktop {
-                right: 44.5%;
-                width:100px;
-            }
+
         }
 
     }
